# faculty_site

./: .env  Cargo.toml  README.MD
src/: main.rs
templates/base/: app.hbs  footer.hbs  header.hbs  leftside.hbs  main.hbs  rightside.hbs
templates/pages/: admin.hbs
templates/parts/: about.hbs  carousel_images.hbs  courses_card.hbs  events_card.hbs  faculity_card.hbs  news.hbs
website/: index.html  index_live.html  index_no_main.html  index_old.html
