[package]
edition = "2021"
name = "faculty_site"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
env_logger = "0.9.0"
handlebars = "4.2.1"
log = "0.4.14"
maplit = "1.0.2"
serde = {version = "1.0.136", features = ["derive"]}
tiny_http = "0.10.0"
